codepkg/objects/Article__kav.object
<CustomObject>
    <fields>
        <fullName>CTP_Answer__c</fullName>
        <description>answer for article</description>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CTP_Discussion_Topic__c</fullName>
        <description>Discussion Topic</description>
        <label>Discussion Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction Call</fullName>
                </value>
                <value>
                    <fullName>10 week call</fullName>
                </value>
                <value>
                    <fullName>23 week call</fullName>
                </value>
                <value>
                    <fullName>75 week call</fullName>
                </value>
                <value>
                    <fullName>20 month call</fullName>
                </value>
                <value>
                    <fullName>Scheme Exit Discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_Question__c</fullName>
        <description>Question in article</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTP_Steps__c</fullName>
        <description>Steps for article</description>
        <label>Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CTP_Talking_Points__c</fullName>
        <description>Talking Points</description>
        <label>Talking Points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>All_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ABSTRACT</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VALIDATION_STATUS_ENUM</field>
            <operation>equals</operation>
            <value>Reassigned,Pending,Approved,Rejected,Draft</value>
        </filters>
        <label>All Articles</label>
    </listViews>
	<listViews>
        <fullName>archived_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ABSTRACT</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ABSTRACT</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ABSTRACT</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <recordTypes>
        <fullName>CTP_Discussion_Guide</fullName>
        <active>true</active>
        <description>Discussion Guide record type</description>
        <label>Discussion Guide</label>
    </recordTypes>
    <recordTypes>
        <fullName>CTP_FAQ</fullName>
        <active>true</active>
        <description>Record Type FAQ for article</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>CTP_How_To</fullName>
        <active>true</active>
        <description>Internal User creates an &quot;How-to&quot; knowledge article</description>
        <label>How To</label>
    </recordTypes>
    <validationRules>
        <fullName>CTP_Discussion_Guide_Mandatory_Fields</fullName>
        <active>true</active>
        <description>Ensuring mandatory fields are filled in when creating a Discussion Guide Article</description>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName,&apos;CTP_Discussion_Guide&apos;),CTP_Talking_Points__c = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please ensure the following mandatory field is completed for Discussion Guides: Talking Points</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CTP_FAQ_Article_Mandatory_Fields</fullName>
        <active>true</active>
        <description>Ensuring mandatory fields are filled in when creating an FAQ Knowledge Article</description>
        <errorConditionFormula>AND(CONTAINS( RecordType.DeveloperName , &apos;CTP_FAQ&apos;),OR(CTP_Question__c = &quot;&quot;,CTP_Answer__c = &quot;&quot;))</errorConditionFormula>
        <errorMessage>Please ensure the following mandatory fields are completed for FAQ Knowledge Articles: Question, Answer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CTP_How_To_Article_Mandatory_Fields</fullName>
        <active>true</active>
        <description>Ensuring mandatory fields are filled in when creating a How-To Knowledge Article</description>
        <errorConditionFormula>AND(CONTAINS( RecordType.DeveloperName , &apos;CTP_How_To&apos;),OR(CTP_Question__c = &quot;&quot;,CTP_Steps__c = &quot;&quot;))</errorConditionFormula>
        <errorMessage>Please ensure the following mandatory fields are completed for How To knowledge articles: Question, Steps</errorMessage>
    </validationRules>
</CustomObject>